--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>JanSSanZ's Music</title>
-	<link rel="icon" href="img/Profile.jpg">
+	<link rel="icon" href="img/ghost.jpeg">
 </head>
 <body>
 	<!-- header element -->
@@ -16,7 +16,7 @@
 	<main>
 		<h2>About Jan SSanZ:</h2>
 		<p>He likes to make music and also listen to music. He also likes to design and edit artwork during his free time.</p>
-		<img src="img/Profile.jpg">
+		<img src="img/playbutton.jpeg">
 		<p>JanSSanZ's profile picture</p>
 		<h2>Some random facts about JanSSanZ:</h2>
 		<ol>
