--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<!-- header element -->
 
-	<img src="img/Profile.jpg">
+	<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F383509724492727397%2F&psig=AOvVaw3tvKK4MsqF_JPoIKKfG6DH&ust=1625113775292000&source=images&cd=vfe&ved=0CAoQjRxqFwoTCOiljOvCvvECFQAAAAAdAAAAABAT">
 	<h1>JanSSanZ</h1>
 
 	<!-- main element -->
