changed image again

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>JanSSanZ's Music</title>
-	<link rel="icon" href="img/ghost.jpeg">
+	<link rel="icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fdesign.tutsplus.com%2Farticles%2Fcool-gaming-logo-designs-using-an-online-gaming-logo-maker--cms-36822&psig=AOvVaw3tvKK4MsqF_JPoIKKfG6DH&ust=1625113775292000&source=images&cd=vfe&ved=0CAoQjRxqFwoTCOiljOvCvvECFQAAAAAdAAAAABAg">
 </head>
 <body>
 	<!-- header element -->
@@ -16,8 +16,8 @@
 	<main>
 		<h2>About Jan SSanZ:</h2>
 		<p>He likes to make music and also listen to music. He also likes to design and edit artwork during his free time.</p>
-		<img src="img/playbutton.jpeg">
-		<p>JanSSanZ's profile picture</p>
+		<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ffnt12.blogspot.com%2F2020%2F06%2Fcool-fonts-for-gaming-logos.html&psig=AOvVaw3tvKK4MsqF_JPoIKKfG6DH&ust=1625113775292000&source=images&cd=vfe&ved=0CAoQjRxqFwoTCOiljOvCvvECFQAAAAAdAAAAABAa">
+		<p>Cool play button</p>
 		<h2>Some random facts about JanSSanZ:</h2>
 		<ol>
 			<li>He also has his own youtube channel named <a target="_blank" href="https://www.youtube.com/channel/UCL-2hEwdSP87e5oJyahFTvg">JanSSanZ</a>.</li>
