--- a/index.html
+++ b/index.html
@@ -3,32 +3,36 @@
 <head>
 	<meta charset="utf-8">
 	<title>JanSSanZ's Music</title>
-	<link rel="icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fdesign.tutsplus.com%2Farticles%2Fcool-gaming-logo-designs-using-an-online-gaming-logo-maker--cms-36822&psig=AOvVaw3tvKK4MsqF_JPoIKKfG6DH&ust=1625113775292000&source=images&cd=vfe&ved=0CAoQjRxqFwoTCOiljOvCvvECFQAAAAAdAAAAABAg">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
 	<!-- header element -->
-
-	<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F383509724492727397%2F&psig=AOvVaw3tvKK4MsqF_JPoIKKfG6DH&ust=1625113775292000&source=images&cd=vfe&ved=0CAoQjRxqFwoTCOiljOvCvvECFQAAAAAdAAAAABAT">
+	<header>
+	<img src="img/profile.jpg">
 	<h1>JanSSanZ</h1>
+	</header>
 
 	<!-- main element -->
 	
 	<main>
 		<h2>About Jan SSanZ:</h2>
-		<p>He likes to make music and also listen to music. He also likes to design and edit artwork during his free time.</p>
-		<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ffnt12.blogspot.com%2F2020%2F06%2Fcool-fonts-for-gaming-logos.html&psig=AOvVaw3tvKK4MsqF_JPoIKKfG6DH&ust=1625113775292000&source=images&cd=vfe&ved=0CAoQjRxqFwoTCOiljOvCvvECFQAAAAAdAAAAABAa">
-		<p>Cool play button</p>
+		<p>JanSSanZ is a 16year-old boy who likes listening and making his own music. He also knows how to design, edit artwork, make 3d models and animate them during his free time.</p>
+		<img src="img/profile.jpg">
+		<p class="caption">This is JanSSanZ's profile picture</p>
 		<h2>Some random facts about JanSSanZ:</h2>
 		<ol>
-			<li>He also has his own youtube channel named <a target="_blank" href="https://www.youtube.com/channel/UCL-2hEwdSP87e5oJyahFTvg">JanSSanZ</a>.</li>
-			<li>He used to make gaming videos but switched to making music.</li>
-			<li>He has published 4 songs so far.</li>
+			<li>He has his own youtube channel named <a target="_blank" href="https://www.youtube.com/channel/UCL-2hEwdSP87e5oJyahFTvg">JanSSanZ</a>.</li>
+			<li>He used to make gaming videos a few years ago but has switched to making music.</li>
+			<li>He has made and published 4 songs so far.</li>
 		</ol>
 		
 		<!-- JanSSanZ's Songs -->
 		
 		<h2>All of JanSSanZ's songs:</h2>
-		<p>He has made a lot of songs until now, and he also produced his beat for his own songs, click on one of the links below to take a listen to his songs:  </p>
+		<p>He has made a lot of songs until now, and he also produced his own beat for his songs, click one of the links below to take a listen:  </p>
 		<ul>
 			<li><a target="_blank" href="https://youtu.be/nx8Q6T8dLN8">JanSSanZ-Your Heart Made Of Stone</a></li>
 			<li><a target="_blank" href="https://youtu.be/LxuiIFXTQxA">JanSSanZ-On My Side</a></li>
