--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<!-- header element -->
 	<header>
-	<img src="img/profile.jpg">
+	<img src="img/Profile.JPG">
 	<h1>JanSSanZ</h1>
 	</header>
 
