--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<!-- header element -->
 	<header>
-	<img src="img/Profile.JPG">
+	<img src="img/Profile.jpg">
 	<h1>JanSSanZ</h1>
 	</header>
 
@@ -20,7 +20,7 @@
 	<main>
 		<h2>About Jan SSanZ:</h2>
 		<p>JanSSanZ is a 16year-old boy who likes listening and making his own music. He also knows how to design, edit artwork, make 3d models and animate them during his free time.</p>
-		<img src="img/profile.jpg">
+		<img src="img/Profile.jpg">
 		<p class="caption">This is JanSSanZ's profile picture</p>
 		<h2>Some random facts about JanSSanZ:</h2>
 		<ol>
